# ralrc-mlip-benchmark

./: # clean_next_stage.ps1.txt  .gitignore  CLAUDE.md  LICENSE  README.md  SESSION_STATE.md  create_files.ps1  diagnose_grads.py  patch_force_test.py  patch_tests.py  pyproject.toml  setup_ralrc.ps1  splits_pilot.json  splits_preflight_seed17.json
benchmarks/: benchmark_results.csv
configs/: charge_head_no_coulomb.yaml  eval.yaml  fixed_charge_coulomb.yaml  learned_charge_coulomb.yaml  local_mace_style.yaml  md.yaml  transition1x_spice.yaml
configs/ablations/: fixed_charge_coulomb.yaml  learned_charge_coulomb.yaml
configs/baselines/: charge_head_no_coulomb.yaml  local_mace_style.yaml
docs/: DIAGNOSIS_2026-04-30.md  research_directions.md  research_plan_30_days.md
reports/: failure_modes.md  final_report.md  next_stage_plan.md  preflight_seed17_results.csv  preflight_seed17_stabilization_report.md  seed17_29_43_table_template.csv
reports/dataset_checks/: frame_manifest_pilot.csv  split_audit.md  (+4 more)
runs/: e_ref.json
scripts/: analyze_frame_manifest.py  build_frame_manifest.py  build_safe_pilot_split.py  check_conclusiveness.ps1  compare_checkpoints.py  dataset_summary.py  diagnose_frames.py  fit_atomic_refs.py  inspect_h5.py  preflight_dataloader.py  run_ablations_seed17.sh  run_all_ablations.sh  run_clean_tests.ps1  run_preflight_seed17.sh  split_audit.py
tests/: test_atomic_refs_roundtrip.py  test_coulomb_gradient.py  test_force_backward.py  test_invariances.py  test_model_clean.py  test_split_safety.py  test_stabilization.py  test_transition1x_loader.py
(+25 files in other folders)
