[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralrc"
version = "0.1.0"
description = "Reactive Charge-Aware Long-Range-Corrected MLIP Benchmark"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "ase>=3.22",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "pytest>=7.4",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
chem = [
    "rdkit>=2023.3",
    "h5py>=3.9",
    "networkx>=3.1",
]
# NOTE: [mace] extra is NOT required for the training pipeline.
# ChargeAwarePotentialClean (model_clean.py) is a standalone implementation
# that does not import mace-torch or e3nn.
#
# mace-torch (all versions >=0.3) hard-pins e3nn==0.4.4.
# e3nn and mace-torch also have no cp314 wheels as of April 2026.
# Only install this extra if you need the upstream MACE architecture
# for comparison, and only on Python <=3.12 with a separate venv.
mace = [
    "mace-torch==0.3.3",
    "e3nn==0.4.4",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
ralrc-train = "ralrc.train:main"
ralrc-eval  = "ralrc.eval:main"
ralrc-split = "ralrc.split:main"
ralrc-md    = "ralrc.md_stability:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
